forgot to make a git commit since I did not complete the steps in order. all steps almost complete

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
         <nav>
             <ul>
                 <li><a href="index.html">hem</a></li>
-                <p></p>
+
                 <li><a href="pages/presentation.html">presentation</a></li>
-                <p></p>
+
                 <li><a href="pages/laborationer.html">laborationer</a></li>
-                <p></p>
+
                 <li><a href="pages/kontakt.html">kontakt</a></li>
-                <p></p>
+
             </ul>
         </nav>
         <main>
             <article>
 
                 <h4>Min blogg handlar om mig</h4>
-                <p>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</p>
+                <div id="text">
+                    <h5>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</h5>
+                </div>
 
                 <p id="vektor"></p>
                 <img src="pics/harry.svg" alt="Harry">
@@ -40,16 +42,15 @@
                         <source src="videos/Theace.mp4" type="video/ogg"> your browser does not support html5 video.
                     </video>
                 </div>
-                <footer>
 
-                    Skrivet av Erik Petersson
-                </footer>
             </article>
 
         </main>
-        <footer>
-            <p>Den här sidan ägs av Erik Petersson</p>
-        </footer>
+        <div id="lastfooter">
+            <footer>
+                <p>Den här sidan ägs av © Erik Petersson</p>
+            </footer>
+        </div>
     </div>
 </body>
 
