--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -89,12 +89,12 @@
         </thead>
         <tfoot> 
             <tr>
-                <td colspan="4">Laborations resultat gällande Erik Petersson</td>
+                <td>Laborations resultat gällande Erik Petersson</td>
             </tr>
         </tfoot>
         <tbody>
             <tr>
-                <td rowspan="10">1</td>
+                <td>1</td>
                 <td>1</td>
                 <td>färdig</td>
                 <td>ej redovisad</td>
@@ -146,12 +146,15 @@
             </tr>
         </tbody>
     </table>
-			<footer>
-			    Skrivet av Erik Petersson
-			</footer>
+			
         </article>
     </article>
     </main>
+    <div id="lastfooter">
+            <footer>
+                <p>Den här sidan ägs av © Erik Petersson</p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
