--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -153,21 +153,6 @@
                     <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
                 </article>
 
-
-
-                <article class="profilfoto">
-                    <header>
-                        <h4>Profilfoto</h4>
-                    </header>
-                    <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
-                    <p id="bild amig"></p>
-                    <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
-                    <footer>
-                        <p>
-                            2015-09-07 10:32, av Erik Petersson
-                        </p>
-                    </footer>
-                </article>
             </article>
             <aside>
                 <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
@@ -179,11 +164,15 @@
                 <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
                 <p></p>
                 <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+                <h4>Profilfoto</h4>
+                <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
             </aside>
         </main>
-        <footer>
-            <p>Den här sidan ägs av Erik Petersson</p>
-        </footer>
+        <div id="lastfooter">
+            <footer>
+                <p>Den här sidan ägs av © Erik Petersson</p>
+            </footer>
+        </div>
     </div>
 
 </body>
