--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -28,17 +28,15 @@
                     <h2>Webbproduktion</h2>
                 </header>
 
-                <article>
-                    <p>länk till uppgiften</p>
-                    <ul>
-                        <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
-                    </ul>
+                <article id="labarticle">
+                    <p id="pleft">länk till uppgiften</p>
+                        <a href="#Laborationsuppgift1" id="lab">Laboration 1</a>
                     <header>
                         <h3><a id="Laborationsuppgift1">Laboration 1</a></h3>
                     </header>
-                    <p>Uppgifter:</p>
+                    <p id="pupp">Uppgifter:</p>
                     <ol>
-                        <li>Absoluta/Relativa sökvägar
+                        <li><strong>Absoluta/Relativa sökvägar</strong>
                             <ol type="a" id="uppgifter">
                                 <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
                                 <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
@@ -49,7 +47,7 @@
                             </ol>
                     </ol>
                     <ol>
-                        <li>Svar: Absoluta/Relativa sökvägar
+                        <li><strong>Svar: Absoluta/Relativa sökvägar</strong>
                             <ol type="a">
                                 <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
                                 <li>1.4.2. /html/pages/top.html</li>
@@ -94,7 +92,58 @@
         </tfoot>
         <tbody>
             <tr>
+                <td rowspan="10">1</td>
                 <td>1</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>färdig</td>
+                <td>redovisad 2015-09-03</td>
+            </tr>
+            <tr>
+                <td>extra</td>
+                <td>påbörjad</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td rowspan="9">2</td>
                 <td>1</td>
                 <td>färdig</td>
                 <td>ej redovisad</td>
@@ -116,12 +165,12 @@
             </tr>
             <tr>
                 <td>5</td>
-                <td>färdig</td>
+                <td>ej påbörjad</td>
                 <td>ej redovisad</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>färdig</td>
+                <td>ej påbörjad</td>
                 <td>ej redovisad</td>
             </tr>
             <tr>
@@ -132,16 +181,6 @@
             <tr>
                 <td>8</td>
                 <td>färdig</td>
-                <td>ej redovisad</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>ej färdig</td>
-                <td>ej redovisad</td>
-            </tr>
-            <tr>
-                <td>extra</td>
-                <td>ej påbörjad</td>
                 <td>ej redovisad</td>
             </tr>
         </tbody>
