--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">hem</a></li>
+                <li><span class="home icon"><a href="index.html">hem</a></span></li>
 
-                <li><a href="pages/presentation.html">presentation</a></li>
+                <li><span class="presentation icon"><a href="pages/presentation.html">presentation</a></span></li>
 
-                <li><a href="pages/laborationer.html">laborationer</a></li>
+                <li><span class=laborationer icon><a href="pages/laborationer.html">laborationer</a></span></li>
 
-                <li><a href="pages/kontakt.html">kontakt</a></li>
+                <li><span class=kontakt icon><a href="pages/kontakt.html">kontakt</a></span></li>
 
             </ul>
         </nav>
