--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -15,10 +15,13 @@
 
         <nav>
             <ul>
-                <li><a href="../index.html">hem</a></li>
-                <li><a href="../pages/presentation.html">presentation</a></li>
-                <li><a href="../pages/laborationer.html">laborationer</a></li>
-                <li><a href="../pages/kontakt.html">kontakt</a></li>
+                <li><span class="home icon"><a href="../index.html">hem</a></span></li>
+
+                <li><span class="presentation icon"><a href="../pages/presentation.html">presentation</a></span></li>
+
+                <li><span class=laborationer icon><a href="../pages/laborationer.html">laborationer</a></span></li>
+
+                <li><span class=kontakt icon><a href="../pages/kontakt.html">kontakt</a></span></li>
             </ul>
         </nav>
 
@@ -30,7 +33,7 @@
 
                 <article id="labarticle">
                     <p id="pleft">länk till uppgiften</p>
-                        <a href="#Laborationsuppgift1" id="lab">Laboration 1</a>
+                    <a href="#Laborationsuppgift1" id="lab">Laboration 1</a>
                     <header>
                         <h3><a id="Laborationsuppgift1">Laboration 1</a></h3>
                     </header>
@@ -165,12 +168,12 @@
             </tr>
             <tr>
                 <td>5</td>
-                <td>ej påbörjad</td>
+                <td>färdig</td>
                 <td>ej redovisad</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>ej påbörjad</td>
+                <td>färdig</td>
                 <td>ej redovisad</td>
             </tr>
             <tr>
