--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" name="viewport" media="only screen and (max-width:480px)" href="../css/media.css">
+    <link rel="icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="shortcut icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="../pics/favicon.png" sizes="120x120" type="image/png">
 </head>
 
 <body>
