--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" name="viewport" media="only screen and (max-width:480px)" href="../css/media.css">
+    <link rel="icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="shortcut icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="../pics/favicon.png" sizes="120x120" type="image/png">
 </head>
 
 <body>
@@ -26,49 +31,50 @@
         </nav>
 
         <main>
-            <article>
+
+
+
+
+
+            <article id="labarticle">
+                <p id="pleft">länk till uppgiften</p>
+                <a href="#Laborationsuppgift1" id="lab">Laboration 1</a>
                 <header>
-                    <h2>Webbproduktion</h2>
+                    <h3><a id="Laborationsuppgift1">Laboration 1</a></h3>
                 </header>
 
-                <article id="labarticle">
-                    <p id="pleft">länk till uppgiften</p>
-                    <a href="#Laborationsuppgift1" id="lab">Laboration 1</a>
-                    <header>
-                        <h3><a id="Laborationsuppgift1">Laboration 1</a></h3>
-                    </header>
-                    <p id="pupp">Uppgifter:</p>
-                    <ol>
-                        <li><strong>Absoluta/Relativa sökvägar</strong>
-                            <ol type="a" id="uppgifter">
-                                <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
-                                <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
-                                <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
-                                <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
-                                <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
-                                <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
-                            </ol>
-                    </ol>
-                    <ol>
-                        <li><strong>Svar: Absoluta/Relativa sökvägar</strong>
-                            <ol type="a">
-                                <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
-                                <li>1.4.2. /html/pages/top.html</li>
-                                <li>1.4.3. /index.html</li>
-                                <li>1.4.4. http://www.server.se/index.html</li>
-                                <li>1.4.5. /html/pages/bottom.html</li>
-                                <li>1.4.6. /html/pages/top.html
-                            </ol>
-                    </ol>
-                    <ul>
-                        <li><a href="../pics/aa.png" target="_blank">Min loga</a></li>
-                    </ul>
-                    <p></p>
-                    <ul>
-                        <li><a href="../pages/presentation.html#lol">Bild på mig</a></li>
-                    </ul>
-                    <dl>
-                        <dt>
+                <ol>
+                    <li><strong>Absoluta/Relativa sökvägar</strong>
+                        <ol type="a" id="uppgifter">
+                            <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
+                            <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
+                            <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
+                            <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
+                            <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
+                            <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
+                        </ol>
+                </ol>
+                <ol>
+                    <li><strong>Svar: Absoluta/Relativa sökvägar</strong>
+                        <ol type="a">
+                            <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
+                            <li>1.4.2. /html/pages/top.html</li>
+                            <li>1.4.3. /index.html</li>
+                            <li>1.4.4. http://www.server.se/index.html</li>
+                            <li>1.4.5. /html/pages/bottom.html</li>
+                            <li>1.4.6. /html/pages/top.html
+                        </ol>
+                </ol>
+
+                <ul>
+                    <li><a href="../pics/aa.png" target="_blank">Min loga</a></li>
+                </ul>
+                <p></p>
+                <ul>
+                    <li><a href="../pages/presentation.html#lol">Bild på mig</a></li>
+                </ul>
+                <dl>
+                    <dt>
                 <dd>Uppgift1.6</dd>
                 <dd><a href="../index.html">Min fantastiska vektorbild</a></dd>
         </dl>
