--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" name="viewport" media="only screen and (max-width:480px)" href="../css/media.css">
+    <link rel="icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="shortcut icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="../pics/favicon.png" sizes="120x120" type="image/png">
 </head>
 
 <body>
@@ -76,8 +81,21 @@
                     <p>Lirade aldrig efter någon speciell rank eftersom jag var 14-15 år när jag lirade som mest. Men det är helt klart det spelet jag haft mest kul i.</p>
                     <p><strong>Counter Strike Global Offensive</strong></p>
                     <p>Började som silver, 0.1kd per game tills nu jag nyligen rankat Legendary Eagle på ett av mina steam konton. Har flertal konton med lägsta ranken Master guardian elite, osäkert när jag ska pusha Legendary Eagle Master och högre.</p>
-                </article>
 
+                    <aside>
+                        <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
+
+                        <a href="http://www.runescape.com" target="_blank">Runescape</a>
+
+                        <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
+
+                        <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
+
+                        <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
+
+                    </aside>
+
+                </article>
                 <article>
                     <header>
                         <h3>Min familj</h3>
@@ -146,7 +164,7 @@
                         <h3>Systemutvecklare.NET?</h3>
                     </header>
                     <p>Jag har länge inte förstått mig på kodning och jag såg min chans genom att söka utbildningen.</p>
-                    <p>Jag tycker samtidigt att det är intressant att lära sig hur det går det.</p>
+                    <p>Jag tycker samtidigt att det är intressant att lära sig hur det går till.</p>
                 </article>
 
                 <article>
@@ -156,20 +174,11 @@
                     <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
                 </article>
 
+
+
+
+
             </article>
-            <aside>
-                <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a>
-                <p></p>
-                <a href="http://www.runescape.com" target="_blank">Runescape</a>
-                <p></p>
-                <a href="http://store.steampowered.com/" target="_blank">CS GO</a>
-                <p></p>
-                <a href="https://www.arduino.cc/" target="_blank">Arduino</a>
-                <p></p>
-                <a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>
-                <h4>Profilfoto</h4>
-                <img src="/pics/IMG_0046.JPG" alt="Bild på mig">
-            </aside>
         </main>
         <div id="lastfooter">
             <footer>
