--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" media="only screen and (max-width:480px)" href="../css/media.css">
+    <link rel="icon" href="pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="shortcut icon" href="pics/favicon.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="pics/favicon.png" sizes="120x120" type="image/png">
 </head>
 
 <body>
+
     <div id="container">
+
         <header>
             <h1>Min underbara blogg</h1>
             <h2>Hej och välkommen till min fantastiska blogg</h2>
@@ -34,14 +41,23 @@
                     <h5>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</h5>
                 </div>
 
-                <p id="vektor"></p>
-                <img src="pics/harry.svg" alt="Harry">
+
+                <img id="vektor" src="pics/harry.svg" alt="Harry">
                 <div id="video">
                     <video controls>
                         <source src="videos/Theace.mp4" type="video/mp4">
                         <source src="videos/Theace.mp4" type="video/ogg"> your browser does not support html5 video.
                     </video>
                 </div>
+                <article>
+                    <img id="lorem" src="../pics/IMG_0046.JPG" alt="lorem ipsum">
+                    <p>
+                        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. It helps to outline
+                        the visual elements of a document or presentation, eg typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero. Its words and letters have been changed by addition
+                        or removal, so to deliberately render its content nonsensical; it's not genuine, correct, or comprehensible Latin anymore. While lorem ipsum's still resembles classical Latin, it actually has no meaning whatsoever. As Cicero's
+                        text doesn't contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearence of European languages, as are digraphs not to be found in the original.
+                    </p>
+                </article>
 
             </article>
 
