--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
                 <li><span class="presentation icon"><a href="pages/presentation.html">presentation</a></span></li>
 
-                <li><span class=laborationer icon><a href="pages/laborationer.html">laborationer</a></span></li>
+                <li><span class="laborationer icon"><a href="pages/laborationer.html">laborationer</a></span></li>
 
-                <li><span class=kontakt icon><a href="pages/kontakt.html">kontakt</a></span></li>
+                <li><span class="kontakt icon"><a href="pages/kontakt.html">kontakt</a></span></li>
 
             </ul>
         </nav>
