--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" name="viewport" media="only screen and (max-width:480px)" href="../css/media.css">
+    <link rel="stylesheet" media="only screen and (max-width:480px)" href="../css/media.css">
     <link rel="icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
     <link rel="shortcut icon" href="../pics/favicon.png" sizes="16x16" type="image/png">
     <link rel="apple-touch-icon" href="../pics/favicon.png" sizes="120x120" type="image/png">
@@ -25,9 +25,9 @@
 
                 <li><span class="presentation icon"><a href="../pages/presentation.html">presentation</a></span></li>
 
-                <li><span class=laborationer icon><a href="../pages/laborationer.html">laborationer</a></span></li>
+                <li><span class="laborationer icon"><a href="../pages/laborationer.html">laborationer</a></span></li>
 
-                <li><span class=kontakt icon><a href="../pages/kontakt.html">kontakt</a></span></li>
+                <li><span class="kontakt icon"><a href="../pages/kontakt.html">kontakt</a></span></li>
             </ul>
         </nav>
 
