--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -186,7 +186,7 @@
             </footer>
         </div>
     </div>
-
+    <script type="text/javascript" src="../java/java.js"></script>
 </body>
 
 </html>
