--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -73,6 +73,7 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript" src="../java/java.js"></script>
 </body>
 
 </html>
