--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -204,5 +204,6 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript" src="../java/java.js"></script>
 </body>
 </html>
