--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript" src="java/javalab4.js"></script>
     <script type="text/javascript" src="java/java.js"></script>
 </body>
 
