--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -186,6 +186,7 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript" src="../java/javalab4.js"></script>
     <script type="text/javascript" src="../java/java.js"></script>
 </body>
 
