--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
                 <li><span class="laborationer icon"><a href="pages/laborationer.html">laborationer</a></span></li>
 
                 <li><span class="kontakt icon"><a href="pages/kontakt.html">kontakt</a></span></li>
+                
+                <li><a href="pages/lab4.html">Laboration4</a></li>
 
             </ul>
         </nav>
         <main>
+
             <article>
 
                 <h4>Min blogg handlar om mig</h4>
@@ -68,6 +71,7 @@
             </footer>
         </div>
     </div>
+    
     <script type="text/javascript" src="java/javalab4.js"></script>
     <script type="text/javascript" src="java/java.js"></script>
 </body>
