--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -27,6 +27,7 @@
                 <li><span class="laborationer icon"><a href="../pages/laborationer.html">laborationer</a></span></li>
 
                 <li><span class="kontakt icon"><a href="../pages/kontakt.html">kontakt</a></span></li>
+                <li><a href="lab4.html">Laboration4</a></li>
             </ul>
         </nav>
 
